--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ body {
 }
 
 button {
-  background: rgba(255, 255, 255, 0.1);
+  background: rgb(54 54 54);
   box-shadow: 0 8px 32px 0 rgba(2, 2, 2, 0.37);
   backdrop-filter: blur(11.5px);
   -webkit-backdrop-filter: blur(11.5px);
