--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 body {
   background-image: url("bc.jpeg");
   width: 100%;
-  height: 100dvh;
+  height: 100vh;
   background-size: cover;
   background-position: center;
   display: flex;
@@ -89,4 +89,7 @@ button:focus {
 .key-others {
   background: #9c9c9c;
   color: #fff;
+}
+marquee {
+  height: 100vh;
 }
